export interface Category {
  _id: string;
  name?: string;
  description?: string;
  image?: string;
  imageId?: string;
  createdAt?: Date;
  updatedAt?: Date;
}
